added second part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>World Cup 2022</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e5a11390c4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -31,6 +31,98 @@
                 <img src="images/ronaldo.jpg.png" alt="ronaldo image">
             </div>
         </sec>
+        <section class="second-part">
+            <aside class="side-part">
+                <a href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Upcomming Matches</a>
+                <a
+                    href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
+                    Groups</a>
+                <a id="third-link" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Blog</a>
+            </aside>
+            <div class="middle-part">
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+                <div class="news">
+                    <img src="images/Robert.jpg" alt="">
+                    <button>Transfer</button>
+                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
+                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
+                            id="detail">10h</span></span>
+                    <span class="icons"><i class="fa-solid fa-message"
+                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
