--- a/index.html
+++ b/index.html
@@ -94,36 +94,25 @@
                     <span class="icons"><i class="fa-solid fa-message"
                             style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
                 </div>
-                <div class="news">
-                    <img src="images/Robert.jpg" alt="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
-                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
-                            id="detail">10h</span></span>
-                    <span class="icons"><i class="fa-solid fa-message"
-                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
-                </div>
-                <div class="news">
-                    <img src="images/Robert.jpg" alt="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
-                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
-                            id="detail">10h</span></span>
-                    <span class="icons"><i class="fa-solid fa-message"
-                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
-                </div>
-                <div class="news">
-                    <img src="images/Robert.jpg" alt="">
-                    <button>Transfer</button>
-                    <h3>Transfer Live: Barcelona sign Robert Lewandowski from Bayern Munich</h3>
-                    <span class="icons"><i class="fa-solid fa-clock" style="color:rgba(128, 128, 128, 0.644)"></i><span
-                            id="detail">10h</span></span>
-                    <span class="icons"><i class="fa-solid fa-message"
-                            style="color:rgba(128, 128, 128, 0.644)"></i><span id="detail">100</span></span>
-                </div>
+
             </div>
         </section>
     </main>
 </body>
+
+<footer>
+    <h2>Goal</h2>
+    <hr>
+    <nav>
+        <ul>
+            <li>Contact Us</li>
+            <li>Terms of Service</li>
+            <li>Privacy Policy</li>
+            <li>Privacy Settings</li>
+            <li>Goal App</li>
+            <li>Goal Live</li>
+        </ul>
+    </nav>
+</footer>
 
 </html>
