--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="intro" id="article">
                 <article>
                     <h1>The Greatest <br> Show On The <br> Earth</h1>
-                    <p>The FIFA World Cup™ is the biggest single-sport competition in the world. After a preliminary
-                        competition, the 32 qualified men’s national football teams compete to become world champions in
-                        a final competition staged during one month in a host country selected by FIFA.</p>
+                    <p>The FIFA World Cup™ is the biggest single-sport competition in the world. 32 qualified men’s
+                        national football teams compete to become world champions.
+                    </p>
                     <a class="link" target="_blank"
                         href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022">Watch Live <i
                             class="fa-solid fa-greater-than"></i></a>
@@ -97,6 +97,7 @@
 
             </div>
         </section>
+        <span class="view"><button>View All</button></span>
     </main>
 </body>
 
