added mobile responsive

--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
     <main>
         <sec class="first-part">
             <div class="intro" id="article">
-                <article>
-                    <h1>The Greatest <br> Show On The <br> Earth</h1>
-                    <p>The FIFA World Cup™ is the biggest single-sport competition in the world. 32 qualified men’s
-                        national football teams compete to become world champions.
-                    </p>
-                    <a class="link" target="_blank"
-                        href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022">Watch Live <i
-                            class="fa-solid fa-greater-than"></i></a>
-                </article>
+                <h1>The Greatest Show On The Earth</h1>
+                <p>The FIFA World Cup™ is the biggest single-sport competition in the world. 32 qualified men’s
+                    national football teams compete to become world champions.
+                </p>
+                <a class="link" target="_blank"
+                    href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022">Watch Live <i
+                        class="fa-solid fa-greater-than"></i></a>
             </div>
-            <div class="intro">
-                <img src="images/ronaldo.jpg.png" alt="ronaldo image">
+            <div class="intro" id="image">
+                <img src="images/world cup.jpeg" alt="ronaldo image">
             </div>
         </sec>
         <section class="second-part">
