added laptop responsive

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </sec>
         <section class="second-part">
             <aside class="side-part">
-                <a href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Upcomming Matches</a>
+                <a target="_blank" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Upcomming Matches</a>
                 <a
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
                     Groups</a>
-                <a id="third-link" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Blog</a>
+                <a target="_blank" id="third-link" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Blog</a>
             </aside>
             <div class="middle-part">
                 <div class="news">
