added second website

--- a/World-Cup-main (1)/World-Cup-main/index.html
+++ b/World-Cup-main (1)/World-Cup-main/index.html
@@ -31,7 +31,9 @@
         </sec>
         <section class="second-part">
             <aside class="side-part">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Upcomming Matches</a>
+                <a target="_blank"
+                    href="http://127.0.0.1:5500/World-Cup-main%20(1)/World-Cup-main/website-2/index.html">Upcomming
+                    Matches</a>
                 <a
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
                     Groups</a>
