--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </sec>
         <section class="second-part">
             <aside class="side-part">
-                <a target="_blank"
-                    href="http://127.0.0.1:5500/World-Cup-main%20(1)/World-Cup-main/website-2/index.html">Upcomming
+                <a target="_blank" href="file:///C:/Projects/World-Cup/website-2/index.html">Upcomming
                     Matches</a>
                 <a
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
