--- a/website-2/index.html
+++ b/website-2/index.html
@@ -36,8 +36,7 @@
                 <a
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
                     Groups</a>
-                <a target="_blank" id="third-link"
-                    href="http://127.0.0.1:5500/World-Cup-main%20(1)/World-Cup-main/index.html">Blog</a>
+                <a target="_blank" id="third-link" href="file:///C:/Projects/World-Cup/index.html">Blog</a>
             </aside>
             <div class="middle-part">
                 <div class="box">
