added second website

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </sec>
         <section class="second-part">
             <aside class="side-part">
-                <a target="_blank" href="file:///C:/Projects/World-Cup/website-2/index.html">Upcomming
+                <a target="_blank" href="website-2/matches.html">Upcomming
                     Matches</a>
                 <a
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
