added bonus part

--- a/website-2/matches.html
+++ b/website-2/matches.html
@@ -33,10 +33,11 @@
             <aside class="side-part">
                 <a id="matches" target="_blank" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Upcomming
                     Matches</a>
-                <a
+                <a target="_blank"
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
                     Groups</a>
-                <a target="_blank" id="third-link" href="/index.html">Blog</a>
+                <a target="_blank" id="third-link"
+                    href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">Blog</a>
             </aside>
             <div class="middle-part">
                 <div class="box">
