--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <aside class="side-part">
                 <a target="_blank" href="website-2/matches.html">Upcomming
                     Matches</a>
-                <a
+                <a target="_blank"
                     href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more">All
                     Groups</a>
                 <a target="_blank" id="third-link" href="https://en.wikipedia.org/wiki/2022_FIFA_World_Cup">Blog</a>
@@ -111,6 +111,11 @@
             <li>Privacy Settings</li>
             <li>Goal App</li>
             <li>Goal Live</li>
+        </ul>
+        <ul class="social">
+            <li><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in"></i></a></li>
         </ul>
     </nav>
 </footer>
